<resources>
    <string name="app_name">ThisLyrics29</string>
    <string name="untungnya_hidup_harus_tetap_berjalan">Untungnya, Hidup Harus Tetap Berjalan\n</string>
    <string name="bernadya">Bernadya</string>
    <string name="release_2024">Release: 2024</string>
    <string name="album_sialnya_hidup_harus_tetap_berjalan">Album: Sialnya, Hidup Harus Tetap Berjalan</string>
    <string name="artis">Bernadya</string>
    <string name="persis_setahun_yang_lalu_ku_dijauhkan_dari_yang_tak_ditakdirkan_untukku_n_yang_kuingat_saat_itu_yang_kulakukan_hanya_menggerutu_n_angkuh_n_lebih_percaya_cara_caraku_pilih_ragukan_rencana_sang_maha_penentu_n_n_chorus_n_untungnya_bumi_masih_berputar_n_untungnya_ku_tak_pilih_menyerah_n_untungnya_ku_bisa_rasa_hal_hal_baik_yang_datangnya_n_belakangan_n_n_bridge_n_ada_waktu_waktu_n_hal_buruk_datang_berturut_turut_n_semua_yang_tinggal_juga_yang_hilang_seberapa_pun_absurdnya_n_pasti_ada_makna_n_n_instrumental_n_n_chorus_n_untungnya_bumi_masih_berputar_n_untungnya_ku_tak_pilih_menyerah_n_itu_memang_paling_mudah_untungnya_kupilih_n_yang_lebih_susah_n_untungnya_kupakai_akal_sehat_n_untungnya_hidup_terus_berjalan_n_untungnya_ku_bisa_rasa_hal_hal_baik_yang_datangnya_n_belakangan_n_n_outro_n_untungnya_untungnya_n_hidup_harus_tetap_berjalan">Persis setahun yang lalu ku dijauhkan dari yang tak Ditakdirkan untukku\n Yang kuingat saat itu, yang kulakukan hanya menggerutu\n Angkuh\n Lebih percaya cara-caraku, pilih ragukan rencana Sang Maha Penentu\n\n \n Untungnya bumi masih berputar\n Untungnya ku tak pilih menyerah\n Untungnya ku bisa rasa hal-hal baik yang datangnya\n Belakangan\n\n \n Ada waktu-waktu\n Hal buruk datang berturut-turut\n Semua yang tinggal juga yang hilang, seberapa pun absurdnya\n Pasti ada makna\n\n \n\n \n Untungnya bumi masih berputar\n Untungnya ku tak pilih menyerah\n Itu memang paling mudah, untungnya kupilih\n Yang lebih susah\n Untungnya kupakai akal sehat\n Untungnya hidup terus berjalan\n Untungnya ku bisa rasa hal-hal baik yang datangnya\n Belakangan\n\n \n Untungnya, untungnya\n Hidup harus tetap berjalan</string>
    <string name="genre_pop">Genre: Pop</string>
    <string name="youtube_https_www_youtube_com_watch_v_vsl5f43qgng">\nYoutube: https://www.youtube.com/watch?v=VSL5F43qgng\n</string>
</resources>